<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.FormActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/MyAppBarLayoutStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="@string/todo_app"
                tools:ignore="VisualLintOverlap" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                app:contentInsetStartWithNavigation="0dp"
                app:paddingEnd="5dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <RelativeLayout
                android:id="@+id/btn_toKeranjang"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    style="@style/MyIconStyle"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@drawable/icon_back" />
            </RelativeLayout>
        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/todo_title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_todo_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_todo_title_here"
            android:importantForAutofill="no"
            style="@style/MyEditTextStyle"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/todo_title"
            tools:ignore="ContentDescription,VisualLintTextFieldSize,DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/tv_todo_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/poppins_regular"
            android:paddingTop="20dp"
            android:text="@string/todo_description"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_todo_title" />

        <EditText
            android:id="@+id/et_todo_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:autofillHints=""
            android:background="@drawable/bg_edittext"
            android:fontFamily="@font/poppins_regular"
            android:gravity="start|top"
            style="@style/MyEditTextStyle"
            android:hint="@string/enter_todo_description_here"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:minLines="3"
            android:padding="8dp"
            android:scrollbars="vertical"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_todo_desc"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/button"
            android:textSize="16sp"
            android:background="@drawable/bg_button"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_todo_desc"
            tools:visibility="visible"
            tools:ignore="VisualLintButtonSize" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="32dp"
            android:text="@string/update"
            android:background="@drawable/bg_button"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_create"
            tools:visibility="visible"
            tools:ignore="VisualLintButtonSize" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.appcompat.widget.LinearLayoutCompat>